--- a/assets/scss/_sections/_section-word-by-word-fixed.scss
+++ b/assets/scss/_sections/_section-word-by-word-fixed.scss
@@ -7,6 +7,11 @@
 
     .section-content {
       position: fixed;
+
+      .is-ios & {
+        position: absolute;
+      }
+
       top: 0;
       left: 20vw;
       height: 100vh;
